# persistable

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-build.yml
examples/: Getting Started Example.ipynb  Persistable.ipynb
examples/knowledgeshare_20170929/: silly{a=1,another_dict={test=[1, 2, 3]},b=4,hello='world'}.pkl
persistable/: __init__.py  base.py  data.py  exceptions.py  io.py  logging.py  persistload.py
persistable/util/: __init__.py  dict.py  higher_level.py  logging.py  os_util.py
tests/: test_base.py  test_data.py  test_persistload.py
tests/util/: test_os_util.py
yml/: README.md  from_yml.ipynb  yml2api.py
